--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,7 +1,28 @@
 {
-    "version": "0.1.0",
-    "command": "python",
-    "isShellCommand": true,
-    "args": ["${file}"],
-    "showOutput": "always"
+    // See https://go.microsoft.com/fwlink/?LinkId=733558
+    // for the documentation about the tasks.json format
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "label": "python3",
+            "type": "shell",
+            "command": "python",
+            "args": [
+                "${file}"
+            ],
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            },
+            "options": {
+                "env": {
+                    "PYTHONIOENCODING": "UTF-8"
+                }
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        }
+    ]
 }
